<resources>
    <string name="app_name">Domolab</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_favorites">Favorites</string>
    <string name="home_rooms">Rooms</string>
    <string name="item_button">item_hint</string>
    <string name="room_name">Room name</string>
    <string name="room_image">Room image</string>
    <string name="background_color_button">background_color_button</string>

    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_tes2">Tes2Activity</string>
    <string name="title_activity_settings_mqtt">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_mqtt_settings">MqttSettingsActivity</string>
    <string name="house_name">House name:</string>
    <string name="put_your_house_name">Put your house name</string>
    <string name="mqtt_server">MQTT server</string>
    <string name="put_the_server_uri_server_address">Put the server URI (Server address)</string>
    <string name="mqtt_usename">MQTT usename</string>
    <string name="put_the_mqtt_server_username">Put the MQTT server username</string>
    <string name="mqtt_paswword">MQTT paswword</string>
    <string name="put_the_mqtt_server_password">Put the MQTT server password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="room_fragment">Room_fragment</string>
    <string name="home_page">home_page</string>
    <string name="menu_add_title">Add...</string>
    <string name="menu_add_room">Add room</string>
    <string name="menu_add_favorite">Add favorite</string>
    <string name="menu_other_options">Other options...</string>
    <string name="menu_need_help">Need Help ?</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_logout">Log out</string>
    <string name="add_device">Device</string>
    <string name="add_room">Room</string>
    <string name="add_favorite">Favorite</string>

    <!-- Strings related to json -->
    <string name="file_rooms_definition">roomsDefinition.json</string>
    <string name="json_list_rooms">list</string>
    <string name="turn_off_all_devices">Turn off all devices</string>
    <string name="add_device">Device</string>
    <string name="add_room">Room</string>
    <string name="add_favorite">Favorite</string>

    <!-- Strings related to json -->
    <string name="file_rooms_definition">roomsDefinition.json</string>
    <string name="json_list_rooms">list</string>
    <string name="menu_settings">Settings</string>
</resources>
